--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <h1>ty dep trai</h1>
-  </body>
+    <h2>ĐÂY LÀ HÌNH ẢNH CỦA TÔI</h2>
+    <a href="/image.png">Click here</a>
+</body>
 </html>
