--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>ty dep trai</h1>
     <h2>ĐÂY LÀ HÌNH ẢNH CỦA TÔI</h2>
-    <a href="/image.png">Click here</a>
-</body>
+    <a href="./image.png">Click here</a>
+  </body>
 </html>
