thêm ảnh miumiu

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>ty dep trai</h1>
-    <h2>ĐÂY LÀ HÌNH ẢNH CỦA TÔI</h2>
-    <a href="./image.png">Click here</a>
+    <h1>Tý đẹp trai</h1>
+    <h2>Đây là facebook của tôi</h2>
+    <a href="https://www.facebook.com/pham.vu.phuong.569734/">Click here</a>
+    <h2>Đây là ảnh của tôi</h2>
+    <img src="./miumiu.jpeg" alt="ảnh miumiu" />
   </body>
 </html>
