sửa kích cỡ ảnh

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h2>Đây là facebook của tôi</h2>
     <a href="https://www.facebook.com/pham.vu.phuong.569734/">Click here</a>
     <h2>Đây là ảnh của tôi</h2>
-    <img src="./miumiu.jpeg" alt="ảnh miumiu" />
+    <img src="./miumiu.jpeg" alt="ảnh miumiu" width="300" />
   </body>
 </html>
